# trendpilot-ai

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  UPGRADE_NOTES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  compliance.md  data-sources.md  execution-layer.md  license-risk-matrix.md  monetization.md  publishing.md  tool-map.md  workflow-design.md
examples/: sample-daily-report-cn.md  sample-daily-report-en.md  sample-product-score-input.json  sample-product-score.csv  sample-product-score.json  sample-report-record.json  sample-source-log.csv  sample-trend-signal.json
examples/python/: README.md  daily_report_generator.py  score_product_idea.py
integrations/: browser-use.md  dify.md  firecrawl.md  google-sheets.md  n8n.md
prompts/: competitor-summary-prompt.md  content-angle-prompt.md  product-scoring-prompt.md  review-pain-point-prompt.md  risk-check-prompt.md  trend-analysis-prompt.md
schemas/: product-score.schema.json  report-record.schema.json  trend-signal.schema.json
scripts/: validate_schema_samples.py
templates/: competitor-snapshot.md  daily-trend-report.md  ecommerce-market-report.md  product-opportunity-scorecard.md  source-log-template.csv  telegram-digest-template.md  weekly-market-brief.md
tests/: test_cli.py  test_records.py  test_report.py  test_schema_samples.py  test_scoring.py
trendpilot/: __init__.py  cli.py  fields.py  records.py  report.py  scoring.py
workflows/: README.md  n8n-community-trend-monitor.pseudo.json  n8n-daily-trend-intelligence.pseudo.json  n8n-google-sheets-output.pseudo.json  n8n-telegram-digest.pseudo.json
(+3 files in other folders)
